Tue Feb 20 08:31:28 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Client 1.1 beta2.

Mon Feb 19 16:06:27 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed client to properly abort TCP stream creation when
	  giving /QUIT.  Affected file 
	  apps/irssi/src/silc/core/silc-servers.c.

	* Fixed several connecting aborting crashes from the client
	  library, packet engine and socket stream.  Affected files
	  are in lib/silclient/, lib/silccore/silcpacket.c and
	  lib/silcutil/unix/silcunixsocketstream.c.

	* Fixed private key export double free crash in key generation.
	  Affected file is lib/silccrypt/silcpk.c.

	* Fixed FSM event waiting when there are multiple signallers
	  and the waiter goes away after the first signal.  Affected
	  file in lib/silcutil/silcfsm.c.

Sun Feb 18 22:02:22 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed FSM event signalling to check if the waiter has gone
	  away already.  Affected file is lib/silcutil/silcfsm.c.

	* Fixed counter mode encryption/decryption to handle non-padded
	  SILC packets correctly.  The silc_cipher_set_iv now
	  in counter mode resets for a new block.  Affected files are
	  in lib/silcske/, lib/silccrypt/, lib/silcpacket/.

Sun Feb 18 12:15:21 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Client 1.1 beta1.

	* Memory leak fixes around the libraries.

Fri Feb 16 16:53:16 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Added better check for epoll() in configure.  Affected file
	  is lib/configure.ad.

Thu Feb 15 16:50:34 EET 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed per scheduler data input buffer in packet engine.  Use
	  list of inbufs instead of just one so that multiple streams
	  can do partial reads to different buffers.  Affected file is
	  lib/silccore/silcpacket.c.

	* Fixed WATCH notify handling in client library.  Affected file
	  is lib/silcclient/client_notify.c.

Wed Feb 14 17:05:38 EET 2007  Pekka Riikonen <priikone@silcnet.org>
