@@ -192,26 +192,26 @@ statusbar = {
 # You can set the default cipher, hash function and HMAC to be used
 # as setting as well.  You can set it here or use the /SET command.
 #
+# /set crypto_default_cipher
+# /set crypto_default_hash
+# /set crypto_default_hmac
+#
 # Available ciphers are (default: aes-256-cbc):
 #
+# aes-256-ctr, aes-192-ctr, aes-128-ctr,
 # aes-256-cbc, aes-192-cbc, aes-128-cbc,
 # twofish-256-cbc, twofish-192-cbc, twofish-128-cbc,
 # cast-256-cbc, cast-192-cbc and cast-128-cbc
 #
 # Available hash functions are (default: sha1):
 #
-# sha1 and md5
+# sha256, sha1 and md5
 #
 # Available HMAC's are (default: hmac-sha1-96):
 #
 # hmac-sha1-96, hmac-md5-96, hmac-sha1 and hmac-md5
 #
 settings = {
-  "server" = {
-    crypto_default_cipher = "aes-256-ctr";
-    crypto_default_hash = "sha1";
-    crypto_default_hmac = "hmac-sha1-96";
-  };
   "fe-common/core" = {
     autocreate_own_query = "yes";
     use_status_window = "no";
