@@ -3,11 +3,12 @@
 #
 #  Author: Pekka Riikonen <priikone@silcnet.org>
 #
-#  Copyright (C) 2000 - 2005 Pekka Riikonen
+#  Copyright (C) 2007 Pekka Riikonen
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
-#  the Free Software Foundation; version 2 of the License.
+#  the Free Software Foundation; either version 2 of the License, or
+#  (at your option) any later version.
 #
 #  This program is distributed in the hope that it will be useful,
 #  but WITHOUT ANY WARRANTY; without even the implied warranty of
@@ -16,23 +17,5 @@
 #
 
 AUTOMAKE_OPTIONS = 1.0 no-dependencies foreign
-
-noinst_LTLIBRARIES = libcontrib.la
-
-if HAVE_REGEX
-REGEX =
-else
-REGEX = regexpr.c
-endif
-
-STRINGPREP = nfkc.c rfc3454.c stringprep.c
-
-if SILC_WIN32
-libcontrib_la_SOURCES = getopti.c $(STRINGPREP)
-else
-libcontrib_la_SOURCES = getopti.c $(STRINGPREP) $(REGEX)
-endif
-
-EXTRA_DIST = *.c *.h
 
 include $(top_srcdir)/Makefile.defines.in
