@@ -1,3 +1,12 @@
+Wed Feb 21 17:01:01 EET 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed WHOIS command and requested attributes handling in
+	  client library.  Affected files are lib/silcclient/command.c
+	  and lib/silcclient/client_attrs.c.
+
+	* Fixed silc_time_value to actually work.  Added new function
+	  silc_timezone.  Affected files are lib/silcutil/silctime.[ch].
+
 Tue Feb 20 08:31:28 EET 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* SILC Client 1.1 beta2.
